# engine_practice

./: Cargo.toml
engines/: Cargo.toml
engines/src/: lib.rs
engines/src/areas/: boxes.rs  mod.rs
engines/src/bodies/: enemies.rs  mod.rs
engines/src/universes/: mod.rs
game/: Cargo.toml
game/src/: main.rs
linalg/: Cargo.toml
linalg/src/: lib.rs
linalg/src/matrix/: arithmetic.rs  constructors.rs  mod.rs  products.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/d2/: mod.rs  rectangle.rs  triangle.rs
models/src/d3/: cube.rs  mod.rs
physics/: Cargo.toml
physics/src/: body.rs  field.rs  force.rs  lib.rs  position.rs
physics/src/energy/: agency.rs  field.rs  force.rs  mod.rs
physics/src/existence/: body.rs
physics/src/fundamental/: divisibility.rs  mass.rs  mod.rs  properties.rs  space.rs  time.rs  universe.rs
physics/src/units/: mass.rs  mod.rs  space.rs  time.rs
physics/src/universes/: mod.rs  sidescroller.rs
renderer/: Cargo.toml
renderer/src/: macros.rs  main.rs
renderer/src/engines/basic/: buffer.rs  engine.rs  macros.rs  mod.rs
renderer/src/gpu/: ids.rs  mod.rs
renderer/src/gpu/device/: mod.rs
renderer/src/gpu/instance/: debugger.rs  macros.rs  mod.rs
renderer/src/gpu/surface/: mod.rs
renderer/src/gpu/system/: macros.rs  mod.rs
renderer/src/gpuv2/: buffer.rs  buffer_set.rs  device_properties.rs  mod.rs  push_constants.rs  shaders.rs  vertex_input.rs  viewport.rs
renderer/src/shaders/: triangle.frag  triangle.vert
renderer/src/window/: macros.rs  mod.rs
world/: Cargo.toml
world/src/: lib.rs
(+6 files in other folders)
