[package]
name = "game"
version = "0.1.0"
edition = "2021"
publish = ["polymorfiq"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linalg = { path = "../linalg", version = "0.1.0" }
physics = { path = "../physics", version = "0.1.0" }
