[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
winit = "0.27.5"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
shaderc = "0.8.1"

linalg = { path = "../linalg" }
world = { path = "../world" }
models = { path = "../models" }